--- a/www/index.html
+++ b/www/index.html
@@ -2033,7 +2033,7 @@
                 '        </div>\n' +
                 '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                 '            <div class="checkbox">\n' +
-                '                <input style="float:right;"\n' +
+                '                <input style="float:right;" id='+ context_identifier + '_width_exact"\n' +
                 (new_context.width.type == opengl_dimension_types.EXACT ? "checked" : "") + '>\n' +
                 '                <label for="' + context_identifier + '_width_exact"></label>\n' +
                 '            </div>\n' +
@@ -2121,7 +2121,7 @@
                 '        </div>\n' +
                 '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                 '            <div class="checkbox">\n' +
-                '                <input style="float:right;"\n' +
+                '                <input style="float:right;" id=' + context_identifier + '_height_exact"\n' +
                 (new_context.height.type == opengl_dimension_types.EXACT ? "checked" : "") + '>\n' +
                 '                <label for="' + context_identifier + '_height_exact"></label>\n' +
                 '            </div>\n' +
