--- a/www/index.html
+++ b/www/index.html
@@ -2329,7 +2329,7 @@
             else
                 $("#" + context_identifier + "_height_exact_js_codemirror").hide();
 
-            this.user_algorithm.contexts.append(new_context);
+            this.user_algorithm.contexts.push(new_context);
         }
 
 
