--- a/www/index.html
+++ b/www/index.html
@@ -2388,7 +2388,7 @@
             var ui_contexts = this.get_ui_contexts();
 
             ui_contexts.push(new_context);
-            this.user_algorithm.push(new_context);
+            this.user_algorithm.contexts.push(new_context);
             this.render_contexts(ui_contexts);
         }
 
