--- a/www/index.html
+++ b/www/index.html
@@ -2364,22 +2364,22 @@
                     ui_context.depth_test = false;
 
                 if($("#" + context_identifier + '_width_screen_size').prop("checked"))
-                    ui_context.width = opengl_dimension_types.SCREEN_SIZE;
+                    ui_context.width.type = opengl_dimension_types.SCREEN_SIZE;
                 else if($("#" + context_identifier + '_width_next_lowest_power_of_two').prop("checked"))
-                    ui_context.width = opengl_dimension_types.NEXT_LOWEST_POWER_OF_TWO;
+                    ui_context.width.type = opengl_dimension_types.NEXT_LOWEST_POWER_OF_TWO;
                 else if($("#" + context_identifier + '_width_next_highest_power_of_two').prop("checked"))
-                    ui_context.width = opengl_dimension_types.NEXT_HIGHEST_POWER_OF_TWO;
+                    ui_context.width.type = opengl_dimension_types.NEXT_HIGHEST_POWER_OF_TWO;
                 else if ($("#" + context_identifier + '_width_exact').prop("checked"))
-                    ui_context.width = opengl_dimension_types.EXACT;
+                    ui_context.width.type = opengl_dimension_types.EXACT;
                 
                 if($("#" + context_identifier + '_height_screen_size').prop("checked"))
-                    ui_context.width = opengl_dimension_types.SCREEN_SIZE;
+                    ui_context.height.type = opengl_dimension_types.SCREEN_SIZE;
                 else if($("#" + context_identifier + '_height_next_lowest_power_of_two').prop("checked"))
-                    ui_context.width = opengl_dimension_types.NEXT_LOWEST_POWER_OF_TWO;
+                    ui_context.height.type = opengl_dimension_types.NEXT_LOWEST_POWER_OF_TWO;
                 else if($("#" + context_identifier + '_height_next_highest_power_of_two').prop("checked"))
-                    ui_context.width = opengl_dimension_types.NEXT_HIGHEST_POWER_OF_TWO;
+                    ui_context.height.type = opengl_dimension_types.NEXT_HIGHEST_POWER_OF_TWO;
                 else if ($("#" + context_identifier + '_height_exact').prop("checked"))
-                    ui_context.width = opengl_dimension_types.EXACT;
+                    ui_context.height.type = opengl_dimension_types.EXACT;
                 
                 ui_context.width.exact_value = this.context_codemirrors[i*2+0].getValue()
                 ui_context.height.exact_value = this.context_codemirrors[i*2+1].getValue()
