--- a/www/index.html
+++ b/www/index.html
@@ -1990,7 +1990,7 @@
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
-                    '                <input style="float:right;" id="' + context_identifier + '_width_screen_size" checked=true type="checkbox" ' +
+                    '                <input style="float:right;" id="' + context_identifier + '_width_screen_size" type="checkbox" ' +
                     (context.width.type == opengl_dimension_types.SCREEN_SIZE ? "checked" : "") + '>\n' +
                     '                <label for="' + context_identifier + '_width_screen_size"></label>\n' +
                     '            </div>\n' +
@@ -2078,7 +2078,7 @@
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
-                    '                <input style="float:right;" id="' + context_identifier + '_height_screen_size" checked=true type="checkbox" ' +
+                    '                <input style="float:right;" id="' + context_identifier + '_height_screen_size" type="checkbox" ' +
                     (context.height.type == opengl_dimension_types.SCREEN_SIZE ? "checked" : "") + '>\n' +
                     '                <label for="' + context_identifier + '_height_screen_size"></label>\n' +
                     '            </div>\n' +
